--- a/auth_service/requirements.txt
+++ b/auth_service/requirements.txt
@@ -13,7 +13,7 @@ dnspython==2.6.1
 email_validator==2.2.0
 idna==3.7
 injector==0.22.0
-kafka-python==2.0.2
+kafka-python-ng==2.2.2
 pycparser==2.22
 pydantic==2.8.2
 pydantic_core==2.20.1
